Migrate GuildSettings to hibernate